RaresHorodinca/App/cm-acme-http-solver-xgtnh-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    auth.istio.io/8089: NONE
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/neg-status: '{"network_endpoint_groups":{"8089":"k8s1-7f7365b4-default-cm-acme-http-solver-xgtnh-8089-7add0c85"},"zones":["europe-west1-b","europe-west1-c","europe-west1-d"]}'
  creationTimestamp: "2024-08-26T10:42:48Z"
  generateName: cm-acme-http-solver-
  labels:
    acme.cert-manager.io/http-domain: "773391643"
    acme.cert-manager.io/http-token: "1271140113"
    acme.cert-manager.io/http01-solver: "true"
  name: cm-acme-http-solver-xgtnh
  namespace: default
  ownerReferences:
  - apiVersion: acme.cert-manager.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Challenge
    name: tennis-reg-tls-k6rz5-3587826066-2470133373
    uid: a0b75178-f392-46d2-83f7-952131f85bab
  resourceVersion: "167355"
  uid: d587ca52-af26-47f6-b28e-4b7938e386fe
spec:
  clusterIP: 34.118.228.185
  clusterIPs:
  - 34.118.228.185
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8089
    protocol: TCP
    targetPort: 8089
  selector:
    acme.cert-manager.io/http-domain: "773391643"
    acme.cert-manager.io/http-token: "1271140113"
    acme.cert-manager.io/http01-solver: "true"
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
