RaresHorodinca/App/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tennis-registration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tennis-registration
  template:
    metadata:
      labels:
        app: tennis-registration
    spec:
      containers:
      - name: tennis-registration
        image: rhoro02/tennis-tournament-bun
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: tennis-registration-service
spec:
  selector:
    app: tennis-registration
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: LoadBalancer
